Fix dropdown right overflow

--- a/packages/dropdown/dropdown.scss
+++ b/packages/dropdown/dropdown.scss
@@ -14,7 +14,7 @@
 
   .rw-input {
     // Not sure why this needs to be tweaked, but it does for visual consistency.
-    padding: 9px 10px;
+    padding: 9px 45px 0 10px;
   }
 
   &:hover {
